k8s/prod/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout http_502"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/use-gzip: "true"
    nginx.ingress.kubernetes.io/gzip-min-length: "1000"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: “3600”
    # nginx.ingress.kubernetes.io/proxy-send-timeout: “3600”
    nginx.ingress.kubernetes.io/server-snippet: |
        gzip on;
        gzip_types      text/plain text/css text/js application/xml application/javascript;
        gzip_proxied    no-cache no-store private expired auth;
        gzip_min_length 1000;
        gzip_disable "MSIE [1-6]\.";
        gzip_vary on;
        gzip_proxied any;
        gzip_comp_level 5;
        gzip_buffers 16 128k;
spec:
  tls:
  - hosts:
      - appymeal.com
      - www.appymeal.com
      - dashboard.appymeal.com
      - www.dashboard.appymeal.com
      - api.appymeal.com
      - demo-whitelabel.appymeal.com
    secretName: appymeal-network-secret
  rules:
  - host: appymeal.com
    http:
      paths:
      - path: /?(.*)
        backend:
          service:
            name: web-frontend-cluster-ip-service
            port:
              number: 3000
        pathType: ImplementationSpecific
  - host: www.appymeal.com
    http:
      paths:
      - path: /?(.*)
        backend:
          service:
            name: web-frontend-cluster-ip-service
            port:
              number: 3000
        pathType: ImplementationSpecific
  - host: dashboard.appymeal.com
    http:
      paths:
      - path: /?(.*)
        backend:
          service:
            name: web-dashboard-frontend-cluster-ip-service
            port:
              number: 3002
        pathType: ImplementationSpecific
  - host: www.dashboard.appymeal.com
    http:
      paths:
      - path: /?(.*)
        backend:
          service:
            name: web-dashboard-frontend-cluster-ip-service
            port:
              number: 3002
        pathType: ImplementationSpecific
  - host: api.appymeal.com
    http:
      paths:
      - path: /?(.*)
        backend:
          service:
            name: api-gateway-service-loadbalancer-service
            port:
              number: 3330
        pathType: ImplementationSpecific
  - host: demo-whitelabel.appymeal.com
    http:
      paths:
      - path: /?(.*)
        backend:
          service:
            name: web-whitelabel-frontend-cluster-ip-service
            port:
              number: 3001
        pathType: ImplementationSpecific
